--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@ remote_theme: heiswayi/the-plain
 
 
 # Site Info
-title:              "Eric Ming Chen"
+title:              "About"
 description:        "My personal site"
 author_name:        "Eric M. Chen"
-logo_url:           https://avatars.githubusercontent.com/u/28665142?v=4 # Get it from GitHub API: https://api.github.com/users/<username>
+logo_url:           https://avxatars.githubusercontent.com/u/28665142?v=4 # Get it from GitHub API: https://api.github.com/users/<username>
 
 # Site Settings
 url:                https://echen01.github.io # main url
